Prevent banner image from getting cut off on wide screens

--- a/sentimental_analysis/realworld/static/css/nemina.css
+++ b/sentimental_analysis/realworld/static/css/nemina.css
@@ -12,7 +12,9 @@ body {
   /* padding: 20px; */
   text-align: left;
   background-color: white;
-} */
+  margin: 0 auto;
+  max-width: 1200px;
+}
 
 #banner-content.row {
   padding-top: 170px;
